# roh_tickets

./: .gcloudignore  .gitignore  Dockerfile  DockerfileDash  README.md  ROH_hall.html  cloud_trigger.py  cloudbuild.yaml  cloudrun_deploy.sh  dash_app.py  deploy.sh  deploy_cloudrun.sh  deploy_dashapp.sh  main.py  playground.ipynb  pyproject.toml  requirements.txt  set_secrets.py  upcoming_events.ipynb
cloud/: platform.py  utils.py
deploy/: cloudfunction.sh  cloudrun.sh  dashapp.sh  deploy_cloudfunction.sh
metadata/: seat_positions.json  titles_colour.json
metadata/bigquery/external_tables/: ext_roh_events.sql  ext_roh_productions.sql
metadata/bigquery/functions/: url_decode.sql
metadata/bigquery/views/: v_roh_events.sql  v_roh_productions.sql
output/: titles_colour.json
python_roh/: casts.py  dash_app.py  entry.py  set_secrets.py  upcoming_events.py
python_roh/dash/: app.py
python_roh/dash/assets/: app.css  screen_width_detection.js  theme_detection.js  vars.py
python_roh/src/: api.py  config.py  graphics.py  src.py  utils.py
src/: config.py  src.py
tools/: __init__.py  firestore.py  parquet.py
various/casts/: load_one_time_casts.py
various/seat_map_positions/: extract_positions.js  load_positions.py  seat_positions.json
various/seat_statuses/: load_seat_statuses.py
