[tool.poetry]
name = "python_roh"
version = "1.0.0"
description = "Ticket Helper for ROH"
authors = ["Artem Nosov <artemiy.nosov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nbformat = "5.9.2"
matplotlib = "3.8.2"
pandas = "2.1.4"
requests = "2.31.0"
ipykernel = "6.28.0"
plotly = "^5.18.0"
kaleido = "0.2.1"
bs4 = "^0.0.2"
pyarrow = "^15.0.0"
retrying = "^1.3.4"
