[tool.poetry]
name = "python_roh"
version = "1.5.0"
description = "Ticket Helper for ROH"
authors = ["Artem Nosov <artemiy.nosov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nbformat = "5.9.2"
matplotlib = "3.8.2"
pandas = "2.1.4"
requests = "2.31.0"
ipykernel = "6.28.0"
plotly = "^5.18.0"
kaleido = "0.2.1"
bs4 = "^0.0.2"
pyarrow = "^15.0.0"
retrying = "^1.3.4"
python-dotenv = "^1.0.1"
google-cloud = "^0.34.0"
gcsfs = "^2024.2.0"
pandas-gbq = "^0.21.0"
google-cloud-secret-manager = "^2.18.1"
google-cloud-pubsub = "^2.19.4"
flask = "2.3.3"
functions-framework = "^3.5.0"
google-cloud-logging = "^3.9.0"
